menghilangkan bg logo blug pada beranda di mobile yang menutupi teks

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -3648,3 +3648,10 @@ div.panel {
     transition: all 0.2s ease; } }
 
 /*# sourceMappingURL=style.css.map */
+
+/*beranda mobile*/
+@media (max-width: 767px) {
+    .hilang #bingkailogokiri, .hilang #bingkailogokanan, .hilang img{
+      display: none !important;
+    }
+  }
